hphp/test/quick/dv_si_func.php.expectf

Fatal error: Default value for parameter a0 with type Int64 needs to have the same type as the type hint string in %s on line 2
